Fixed: Dark mode for pop-up of marker

--- a/css/dark.css
+++ b/css/dark.css
@@ -76,6 +76,11 @@
     .mapboxgl-popup-content {
         background: var(--mdc-theme-surface) !important;
     }
+
+    .mapboxgl-popup-anchor-top .mapboxgl-popup-tip {
+        border-bottom-color: var(--mdc-theme-surface) !important;
+    }
+    
     .mapboxgl-popup-anchor-bottom .mapboxgl-popup-tip {
         border-top-color: var(--mdc-theme-surface) !important;
     }
